examples/type_system/failing/33_module_qualified_effect_propagation_missing.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E400: module-qualified call chain should propagate IO requirement.

import TypeSystem.EffectsChain

fn run() -> Int with Time {
    TypeSystem.EffectsChain.call_io_step(1)
}
